Closed
Bug 421943
Opened 17 years ago
Closed 17 years ago
"redundant multiplexed document" should be a warning not assertion
Categories
(Core :: XPCOM, defect)
Core
XPCOM
Tracking
()
RESOLVED
FIXED
mozilla1.9beta5
People
(Reporter: dietrich, Assigned: dietrich)
References
Details
Attachments
(1 file)
|
1.28 KB,
patch
|
sayrer
:
review+
shaver
:
superreview+
shaver
:
approval1.9+
|
Details | Diff | Splinter Review |
See Brendan's comment in bug 384370:
https://bugzilla.mozilla.org/show_bug.cgi?id=384370#c153
Updated•17 years ago
|
OS: Mac OS X → All
Hardware: PC → All
Version: unspecified → Trunk
| Assignee | ||
Comment 1•17 years ago
|
||
I haven't tested this, as i can't reproduce the assertion locally. Rob, do you know of a way to trigger this?
Attachment #308632 -
Flags: review?(sayrer)
Updated•17 years ago
|
Attachment #308632 -
Flags: superreview?(brendan)
Attachment #308632 -
Flags: review?(sayrer)
Attachment #308632 -
Flags: review+
Comment 2•17 years ago
|
||
Review from a XPCOM peer, please?
Component: General → XPCOM
QA Contact: general → xpcom
Updated•17 years ago
|
Assignee: nobody → dietrich
Comment 3•17 years ago
|
||
Comment on attachment 308632 [details] [diff] [review]
warn instead of assert
sr+a=shaver, thanks.
Attachment #308632 -
Flags: superreview?(brendan)
Attachment #308632 -
Flags: superreview+
Attachment #308632 -
Flags: approval1.9+
| Assignee | ||
Comment 4•17 years ago
|
||
Checking in xpcom/io/nsFastLoadFile.cpp;
/cvsroot/mozilla/xpcom/io/nsFastLoadFile.cpp,v <-- nsFastLoadFile.cpp
new revision: 3.51; previous revision: 3.50
done
| Assignee | ||
Updated•17 years ago
|
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9beta5
You need to log in
before you can comment on or make changes to this bug.
Description
•