Bug 421943 ? "redundant multiplexed document" should be a warning not assertion (r=sayre, sr+a=shaver)